# sfp-interface-pico

./: .gitignore  CMakeLists.txt  README.md  main.c  sfp_8472.c  sfp_8472.h
I2C/: i2c.c  i2c.h
joystick/: JoystickPi.c
menu/: menu.c  menu.h
sfp_8472/: a0h.c  a0h.h  a2h.c  a2h.h  defs.h  sfp_8472.c  sfp_8472.h
ssd1306/: ssd1306.c  ssd1306.h
